fixed projects view on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,14 +3,23 @@ body {
   font-family: Ubuntu;
 }
 
-.project-wrapper {
+/* .project-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 2em;
   row-gap: 1em;
-}
+} */
 
 .badge {
   margin-left: 0.5em;
   margin-right: 0.5em;
+}
+
+.card-columns {
+  @include media-breakpoint-only(sm) {
+    column-count: 1;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 3;
+  }
 }
